correction mobile first menu

--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ footer {
   background-color: #f2f2f2;
 }
 
+.menu-enchanter {
+  height: 1700px;
+}
+
 .presentation {
   display: flex;
   flex-direction: column;
@@ -113,6 +117,7 @@ figcaption {
 
 .baniere {
   width: 100%;
+  height: 300px;
 }
 
 input {
@@ -144,7 +149,7 @@ input {
 }
 
 .bt-explorer,
-.bt-commander{
+.bt-commander {
   width: 210px;
   height: 25px;
   margin-left: 65px;
